--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Countdown Timer - Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="launch-countdown-timer-main/style.css">
+  <link rel="stylesheet" href="/launch-countdown-timer-main/style.css">
   <style>
 
     .sky h1 {
