Ajuste index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown Timer - Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./launch-countdown-timer-main/style.css">
+  <link rel="stylesheet" href="./countdown/launch-countdown-timer-main/style.css">
   <style>
 
     .sky h1 {
@@ -49,7 +49,7 @@
       <h1>countdown-timer</h1>
       <ul>
         <li>
-            <a href="/launch-countdown-timer-main-flipclock/index.html">Solução 1 (JS, CSS, HTML, SCSS, JQuery, Flipclock) 
+            <a href="./countdown/launch-countdown-timer-main-flipclock/index.html">Solução 1 (JS, CSS, HTML, SCSS, JQuery, Flipclock) 
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <rect width="18" height="18" fill="url(#pattern0)"/>
                     <defs>
@@ -62,7 +62,7 @@
             </a>
         </li>
         <li>
-            <a href="/launch-countdown-timer-main/index.html">Solução 2 (JS, CSS, HTML, SCSS) 
+            <a href="./countdown/launch-countdown-timer-main/index.html">Solução 2 (JS, CSS, HTML, SCSS) 
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <rect width="18" height="18" fill="url(#pattern0)"/>
                     <defs>
