Ajuste index.html

--- a/countdown/launch-countdown-timer-main/index.html
+++ b/countdown/launch-countdown-timer-main/index.html
@@ -32,7 +32,7 @@
     <div class="sky">
       <h1>We're launching soon</h1>
       <div class="flip-clock" data-date="2017-02-11">
-        <span class="flip-clock__piece flip days" style="">
+        <span class="flip-clock__piece days" style="">
           <span class="flip-clock__card flip-card">
             <b class="flip-card__top">00</b>
             <b class="flip-card__bottom" data-value="00"></b>
@@ -40,7 +40,7 @@
             <b class="flip-card__back-bottom" data-value="00"></b>
           </span>
           <span class="flip-clock__slot">Days</span>
-        </span><span class="flip-clock__piece flip hours" style="">
+        </span><span class="flip-clock__piece hours" style="">
           <span class="flip-clock__card flip-card">
             <b class="flip-card__top">00</b>
             <b class="flip-card__bottom" data-value="00"></b>
@@ -48,7 +48,7 @@
             <b class="flip-card__back-bottom" data-value="00"></b>
           </span>
           <span class="flip-clock__slot">Hours</span>
-        </span><span class="flip-clock__piece flip minutes" style="">
+        </span><span class="flip-clock__piece minutes" style="">
           <span class="flip-clock__card flip-card">
             <b class="flip-card__top">00</b>
             <b class="flip-card__bottom" data-value="00"></b>
@@ -56,7 +56,7 @@
             <b class="flip-card__back-bottom" data-value="00"></b>
           </span>
           <span class="flip-clock__slot">Minutes</span>
-        </span><span class="flip-clock__piece flip seconds" style="">
+        </span><span class="flip-clock__piece seconds" style="">
           <span class="flip-clock__card flip-card">
             <b class="flip-card__top">00</b>
             <b class="flip-card__bottom" data-value="00"></b>
